kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-app
  labels:
    environment: dev
    project: kubernetes-workshop
