kubernetes/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev-app
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
