kubernetes/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: dev-app
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
  type: ClusterIP
